--- a/school-management/src/app/components/welcome/welcome.component.scss
+++ b/school-management/src/app/components/welcome/welcome.component.scss
@@ -494,22 +494,22 @@
 }
 
 // Background decoration
-.welcome::before {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: -50px;
-  width: 100px;
-  height: 100px;
-  background: linear-gradient(45deg, #4A90E2, #63B3ED);
-  border-radius: 50%;
-  opacity: 0.05;
-  z-index: 0;
+// .welcome::before {
+//   content: '';
+//   position: absolute;
+//   top: 50%;
+//   left: -50px;
+//   width: 100px;
+//   height: 100px;
+//   background: linear-gradient(45deg, #4A90E2, #63B3ED);
+//   border-radius: 50%;
+//   opacity: 0.05;
+//   z-index: 0;
 
-  @media (max-width: 768px) {
-    display: none;
-  }
-}
+//   @media (max-width: 768px) {
+//     display: none;
+//   }
+// }
 
 // .welcome::after {
 //   content: '';
